# SonicDiffusionBayesLab

./: .gitignore  README.md  calc_clip_score.py  main.py  metrics.py  pyproject.toml
configs/: consistency_model_config.yaml  ddim_config.yaml  deep_cache_config.yaml  default_stable_diffusion.yaml  dpm_solver_config.yaml  two_schedulers_config.yaml
data/dataset/: img2annotations_test.json  img2annotations_train.json  img2annotations_val.json
src/: __init__.py  models.py  registry.py  schedulers.py
src/dataset/: dataset.py
src/experiments/: __init__.py  base_experiment.py  consistency_model.py  ddim.py  deep_cache.py  default_sd.py  dpm_solver.py  interliving_exp.py  skip_steps_exp.py  two_schedulers.py
src/loggers/: wandb.py
src/metrics/: __init__.py  aethetic_score_model.py  metrics.py  union_metrics.py
src/utils/: class_registry.py  model_utils.py
